NavBar is completed

--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
     <title>EcoBrands</title>
 </head>
 <body>
-    <main class="h-screen w-full bg-black">
-
-    </main>
+    <nav class="w-full h-[8vh] border-2 border-black px-[2%] flex justify-end items-center gap-[27%]">
+    <div class="CENTER w-[22%] h-full flex justify-center items-center gap-[10%]">
+        <p class="text-base">Home</p>
+        <p class="text-base">Services</p>
+        <p class="text-base">Clients</p>
+        <p class="text-base">About</p>
+    </div>
+    <div class="RIGHT w-[15%] h-full flex justify-center items-center gap-[10%]">
+        <p class="text-base">FAQ</p>
+        <p class="text-base p-[4%] border-2 border-[#C4EC28] rounded-full">Get Started</p>
+    </div>
+    </nav>
     <script src="script.js"></script>
 </body>
 </html>
