--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@
         <p class="text-base p-[4%] border-2 border-[#C4EC28] rounded-full">Get Started</p>
     </div>
     </nav>
+    <div class="Page1 w-full h-[92vh] border-2 border-black flex justify-center items-center gap-[0.5%]">
+        <div class="LEFT h-full w-[18%] bg-red-500"></div>
+        <div class="CENTER h-full w-[60%] flex flex-col justify-center items-center bg-red-100 relative">
+            <p class="w-full h-[10%] flex justify-center items-center text-lg">Creating Experience that Inspire:</p>
+            <p class="w-full h-[20%] flex justify-center items-center text-7xl">Discover Eco-friendly</p>
+            <p class="w-full h-[20%] flex justify-center items-center text-7xl relative">Brand<span class="h-[12vh] w-[12vh] mx-3 border-2 border-[#7EAE47] rounded-full relative">
+                <span class="INNERCOLOR h-[90%] w-[90%] rounded-full bg-[#5F20EA] absolute"><img class="INNER_ROTATE" src="Assets/rotate.png" alt=""></span>
+            </span> with Our</p>
+            <p class="w-full h-[20%] flex justify-center items-center text-7xl"><span class="h-fit w-fit m-2 flex justify-center items-center p-2 rounded-lg rotate-[5deg] bg-[#B9E801]">Creative</span>Magic</p>
+        </div>
+        <div class="RIGHT h-full w-[15%] bg-red-900"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
