Right part of page2 has been completed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
             </span> with Our</p>
             <p class="w-full h-[20%] flex justify-center items-center text-7xl"><span class="h-fit w-fit m-2 flex justify-center items-center p-2 rounded-lg rotate-[5deg] bg-[#B9E801]">Creative</span>Magic</p>
         </div>
-        <div class="RIGHT h-full w-[15%] bg-red-900"></div>
+        <div class="RIGHT h-full w-[15%] bg-red-500 flex flex-col items-center gap-[2%]">
+            <span class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[16vh]">New UI Design</span>
+            <span class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[16vh] -translate-x-[0.5vw]">Crafter By Chirag</span>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
