Small Typo has been Fixed

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="RIGHT h-full w-[15%] bg-red-500 flex flex-col items-center gap-[2%]">
             <span class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[16vh]">New UI Design</span>
-            <span class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[16vh] -translate-x-[0.5vw]">Crafter By Chirag</span>
+            <span class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[16vh] -translate-x-[0.5vw]">Crafted By Chirag</span>
         </div>
     </div>
     <script src="script.js"></script>
