Left Part has been created along with the addition of image on the left side

--- a/index.html
+++ b/index.html
@@ -21,8 +21,24 @@
     </div>
     </nav>
     <div class="Page1 w-full h-[92vh] border-2 border-black flex justify-center items-center gap-[0.5%]">
-        <div class="LEFT h-full w-[18%] bg-red-500"></div>
-        <div class="CENTER h-full w-[60%] flex flex-col justify-center items-center bg-red-100 relative">
+        <div class="LEFT h-full w-[18%] flex items-end py-[2%] relative">
+            <div class="h-[32%] w-full">
+                <div class="UPPER h-[40%] w-full flex items-center">
+                    <div class="PROFILE_CONTAINER h-[10vh] w-[10vh] rounded-full border-2 border-[#B9E901] overflow-hidden">
+                        <img class="h-full w-full objcet-cover" src="Assets/profile.jpg" alt="">
+                    </div>
+                </div>
+                <div class="LOWER h-[60%] w-full py-1">
+                    We believe that every small step towards
+                        sustainability can collectively create a greener
+                        and cleaner world for future generations.
+                </div>
+            </div>
+            <div class="IMAGE1 h-[35vh] w-[20vw] rounded-t-lg rounded-b-full overflow-hidden absolute left-[25%] top-[10%] -rotate-[15deg]">
+                <img class="h-full w-full rounded-t-lg objcet-cover" src="Assets/i1.jpg" alt="">
+            </div>
+        </div>
+        <div class="CENTER h-full w-[60%] flex flex-col justify-center items-center relative">
             <p class="w-full h-[10%] flex justify-center items-center text-lg">Creating Experience that Inspire:</p>
             <p class="w-full h-[20%] flex justify-center items-center text-7xl">Discover Eco-friendly</p>
             <p class="w-full h-[20%] flex justify-center items-center text-7xl relative">Brand<span class="h-[12vh] w-[12vh] mx-3 border-2 border-[#7EAE47] rounded-full relative">
@@ -30,7 +46,7 @@
             </span> with Our</p>
             <p class="w-full h-[20%] flex justify-center items-center text-7xl"><span class="h-fit w-fit m-2 flex justify-center items-center p-2 rounded-lg rotate-[5deg] bg-[#B9E801]">Creative</span>Magic</p>
         </div>
-        <div class="RIGHT h-full w-[15%] bg-red-500 flex flex-col items-center gap-[2%]">
+        <div class="RIGHT h-full w-[15%] flex flex-col items-center gap-[2%]">
             <span class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[16vh]">New UI Design</span>
             <span class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[16vh] -translate-x-[0.5vw]">Crafted By Chirag</span>
         </div>
