Right Image has been inserted

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>EcoBrands</title>
 </head>
 <body>
-    <nav class="w-full h-[8vh] border-2 border-black px-[2%] flex justify-end items-center gap-[27%]">
+    <nav class="w-full h-[8vh] px-[2%] flex justify-end items-center gap-[27%]">
     <div class="CENTER w-[22%] h-full flex justify-center items-center gap-[10%]">
         <p class="text-base">Home</p>
         <p class="text-base">Services</p>
@@ -20,7 +20,7 @@
         <p class="text-base p-[4%] border-2 border-[#C4EC28] rounded-full">Get Started</p>
     </div>
     </nav>
-    <div class="Page1 w-full h-[92vh] border-2 border-black flex justify-center items-center gap-[0.5%]">
+    <div class="Page1 w-full h-[92vh] flex justify-center items-center gap-[0.5%]">
         <div class="LEFT h-full w-[18%] flex items-end py-[2%] relative">
             <div class="h-[32%] w-full">
                 <div class="UPPER h-[40%] w-full flex items-center">
@@ -46,9 +46,12 @@
             </span> with Our</p>
             <p class="w-full h-[20%] flex justify-center items-center text-7xl"><span class="h-fit w-fit m-2 flex justify-center items-center p-2 rounded-lg rotate-[5deg] bg-[#B9E801]">Creative</span>Magic</p>
         </div>
-        <div class="RIGHT h-full w-[15%] flex flex-col items-center gap-[2%]">
+        <div class="RIGHT h-full w-[15%] flex flex-col items-center gap-[2%] relative">
             <span class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[16vh]">New UI Design</span>
             <span class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[16vh] -translate-x-[0.5vw]">Crafted By Chirag</span>
+            <div class="RIGHT_IMAGE h-[30vh] w-[15vw] rounded-tr-full rounded-b-lg bg-black absolute bottom-[10%] right-[60%] rotate-[10deg] overflow-hidden">
+                <img class="h-full w-full objcet-cover" src="Assets/i2.jpg" alt="">
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
