All the images has been set

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                         and cleaner world for future generations.
                 </div>
             </div>
-            <div class="IMAGE1 h-[35vh] w-[20vw] rounded-t-lg rounded-b-full overflow-hidden absolute left-[25%] top-[10%] -rotate-[15deg]">
-                <img class="h-full w-full rounded-t-lg objcet-cover" src="Assets/i1.jpg" alt="">
+            <div class="IMAGE1 h-[37.5vh] w-[19.5vw] rounded-t-lg rounded-b-full overflow-hidden absolute left-[25%] top-[10%] -rotate-[15deg]">
+                <!-- <img class="h-full w-full rounded-t-lg objcet-cover" src="Assets/i1.jpg" alt=""> -->
             </div>
         </div>
         <div class="CENTER h-full w-[60%] flex flex-col justify-center items-center relative">
@@ -49,8 +49,8 @@
         <div class="RIGHT h-full w-[15%] flex flex-col items-center gap-[2%] relative">
             <span class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[16vh]">New UI Design</span>
             <span class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[16vh] -translate-x-[0.5vw]">Crafted By Chirag</span>
-            <div class="RIGHT_IMAGE h-[30vh] w-[15vw] rounded-tr-full rounded-b-lg bg-black absolute bottom-[10%] right-[60%] rotate-[10deg] overflow-hidden">
-                <img class="h-full w-full objcet-cover" src="Assets/i2.jpg" alt="">
+            <div class="RIGHT_IMAGE h-[30vh] w-[30vh] rounded-tr-full rounded-b-lg bg-black absolute bottom-[10%] right-[60%] rotate-[10deg] overflow-hidden">
+                <!-- <img class="h-full w-full objcet-cover" src="Assets/i2.jpg" alt=""> -->
             </div>
         </div>
     </div>
