--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
     <title>EcoBrands</title>
@@ -44,6 +48,7 @@
                 <span class="INNERCOLOR h-[90%] w-[90%] rounded-full bg-[#5F20EA] absolute"><img class="INNER_ROTATE" src="Assets/rotate.png" alt=""></span>
             </span> with Our</p>
             <p class="w-full h-[20%] flex justify-center items-center text-7xl"><span class="h-fit w-fit m-2 flex justify-center items-center p-2 rounded-lg rotate-[5deg] bg-[#B9E801]">Creative</span>Magic</p>
+            <span class="scrollDown absolute bottom-[6.5%] text-lg" >Scroll Down <i class="ri-arrow-down-circle-fill text-blue-700 text-lg"></i></span>
         </div>
         <div class="RIGHT h-full w-[15%] flex flex-col items-center gap-[2%] relative">
             <span class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[10vh]">New UI Design</span>
