--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             </div>
         </div>
     </div>
+    <div class="Page2 border-2 border-black h-screen w-full bg-black"></div>
     <script src="script.js"></script>
 </body>
 </html>
