Fix the Size issues

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         and cleaner world for future generations.
                 </div>
             </div>
-            <div class="IMAGE1 h-[37.5vh] w-[19.5vw] rounded-t-lg rounded-b-full overflow-hidden absolute left-[25%] top-[10%] -rotate-[15deg]">
+            <div class="IMAGE1 overflow-hidden absolute left-[25%] top-[10%] -rotate-[15deg]">
             </div>
         </div>
         <div class="CENTER h-full w-[60%] flex flex-col justify-center items-center relative">
@@ -53,7 +53,7 @@
         <div class="RIGHT h-full w-[15%] flex flex-col items-center gap-[2%] relative">
             <span class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[10vh]">New UI Design</span>
             <span class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[10vh] -translate-x-[0.5vw]">Crafted By Chirag</span>
-            <div class="RIGHT_IMAGE h-[30vh] w-[30vh] rounded-tr-full rounded-b-lg bg-black absolute bottom-[10%] right-[60%] rotate-[10deg] overflow-hidden">
+            <div class="RIGHT_IMAGE bg-black absolute bottom-[10%] right-[60%] rotate-[10deg] overflow-hidden">
             </div>
         </div>
     </div>
