Upper part of page 2 containing two circles and text has been completed

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
             </div>
         </div>
     </div>
-    <div class="Page2 border-2 border-black h-screen w-full bg-black"></div>
+    <div class="Page2 border-2 border-black h-[150vh] w-full border-2 border-black">
+        <div class="w-full h-[5%] flex items-center border-2 border-black gap-[0.5%] px-[3%]"><span class="w-[4vh] h-[4vh] bg-[#FFFFFF] rounded-full"></span><span class="w-[4vh] h-[4vh] bg-[#B9E901] rounded-full"></span><p class="ml-[1%] text-lg">Our Services</p></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
