Text Containg div in page 2 has been completed

--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
     <title>EcoBrands</title>
 </head>
+
 <body>
     <nav class="w-full h-[8vh] px-[2%] flex justify-end items-center gap-[27%]">
-    <div class="CENTER w-[22%] h-full flex justify-center items-center gap-[10%]">
-        <p class="text-base">Home</p>
-        <p class="text-base">Services</p>
-        <p class="text-base">Clients</p>
-        <p class="text-base">About</p>
-    </div>
-    <div class="RIGHT w-[15%] h-full flex justify-center items-center gap-[10%]">
-        <p class="text-base">FAQ</p>
-        <p class="text-base p-[4%] border-2 border-[#C4EC28] rounded-full">Get Started</p>
-    </div>
+        <div class="CENTER w-[22%] h-full flex justify-center items-center gap-[10%]">
+            <p class="text-base">Home</p>
+            <p class="text-base">Services</p>
+            <p class="text-base">Clients</p>
+            <p class="text-base">About</p>
+        </div>
+        <div class="RIGHT w-[15%] h-full flex justify-center items-center gap-[10%]">
+            <p class="text-base">FAQ</p>
+            <p class="text-base p-[4%] border-2 border-[#C4EC28] rounded-full">Get Started</p>
+        </div>
     </nav>
     <div class="Page1 w-full h-[92vh] flex justify-center items-center gap-[0.5%]">
         <div class="LEFT h-full w-[18%] flex items-end py-[2%] relative">
             <div class="h-[32%] w-full">
                 <div class="UPPER h-[40%] w-full flex items-center">
-                    <div class="PROFILE_CONTAINER h-[10vh] w-[10vh] rounded-full border-2 border-[#B9E901] overflow-hidden">
+                    <div
+                        class="PROFILE_CONTAINER h-[10vh] w-[10vh] rounded-full border-2 border-[#B9E901] overflow-hidden">
                         <img class="h-full w-full objcet-cover" src="Assets/profile.jpg" alt="">
                     </div>
                 </div>
                 <div class="LOWER h-[60%] w-full py-1">
                     We believe that every small step towards
-                        sustainability can collectively create a greener
-                        and cleaner world for future generations.
+                    sustainability can collectively create a greener
+                    and cleaner world for future generations.
                 </div>
             </div>
             <div class="IMAGE1 overflow-hidden absolute left-[50%] top-[10%] -rotate-[15deg]">
@@ -44,23 +44,43 @@
         <div class="CENTER h-full w-[60%] flex flex-col justify-center items-center relative">
             <p class="w-full h-[10%] flex justify-center items-center text-lg">Creating Experience that Inspire:</p>
             <p class="w-full h-[20%] flex justify-center items-center text-7xl">Discover Eco-friendly</p>
-            <p class="w-full h-[20%] flex justify-center items-center text-7xl relative">Brand<span class="h-[12vh] w-[12vh] mx-3 border-2 border-[#7EAE47] rounded-full relative">
-                <span class="INNERCOLOR h-[90%] w-[90%] rounded-full bg-[#5F20EA] absolute"><img class="INNER_ROTATE" src="Assets/rotate.png" alt=""></span>
-            </span> with Our</p>
-            <p class="w-full h-[20%] flex justify-center items-center text-7xl"><span class="h-fit w-fit m-2 flex justify-center items-center p-2 rounded-lg rotate-[5deg] bg-[#B9E801]">Creative</span>Magic</p>
-            <span class="scrollDown absolute bottom-[6.5%] text-lg" >Scroll Down <i class="ri-arrow-down-circle-fill text-blue-700 text-lg"></i></span>
+            <p class="w-full h-[20%] flex justify-center items-center text-7xl relative">Brand<span
+                    class="h-[12vh] w-[12vh] mx-3 border-2 border-[#7EAE47] rounded-full relative">
+                    <span class="INNERCOLOR h-[90%] w-[90%] rounded-full bg-[#5F20EA] absolute"><img
+                            class="INNER_ROTATE" src="Assets/rotate.png" alt=""></span>
+                </span> with Our</p>
+            <p class="w-full h-[20%] flex justify-center items-center text-7xl"><span
+                    class="h-fit w-fit m-2 flex justify-center items-center p-2 rounded-lg rotate-[5deg] bg-[#B9E801]">Creative</span>Magic
+            </p>
+            <span class="scrollDown absolute bottom-[6.5%] text-lg">Scroll Down <i
+                    class="ri-arrow-down-circle-fill text-blue-700 text-lg"></i></span>
         </div>
         <div class="RIGHT h-full w-[15%] flex flex-col items-center gap-[2%] relative">
-            <span class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[10vh]">New UI Design</span>
-            <span class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[10vh] -translate-x-[0.5vw]">Crafted By Chirag</span>
+            <span
+                class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[10vh]">New
+                UI Design</span>
+            <span
+                class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[10vh] -translate-x-[0.5vw]">Crafted
+                By Chirag</span>
             <div class="RIGHT_IMAGE bg-black absolute bottom-[10%] right-[60%] rotate-[10deg] overflow-hidden">
             </div>
         </div>
     </div>
     <div class="Page2 border-2 border-black h-[150vh] w-full border-2 border-black">
         <!-- Upper part containing two circles and Text -->
-        <div class="w-full h-[5%] flex items-center border-2 border-black gap-[0.5%] px-[3%]"><span class="w-[4vh] h-[4vh] bg-[#FFFFFF] rounded-full"></span><span class="w-[4vh] h-[4vh] bg-[#B9E901] rounded-full"></span><p class="ml-[1%] text-lg">Our Services</p></div>
+        <div class="w-full h-[5%] flex items-center border-2 border-black gap-[0.5%] px-[3%]"><span
+                class="w-[4vh] h-[4vh] bg-[#FFFFFF] rounded-full"></span><span
+                class="w-[4vh] h-[4vh] bg-[#B9E901] rounded-full"></span>
+            <p class="ml-[1%] text-lg">Our Services</p>
+        </div>
+        <!-- Text Containing Div-->
+        <div class="mt-[2%] px-[3%] border-2 border-black">
+            <p class="text-7xl">Find out more about</p>
+            <p class="text-7xl">our EcoBrands</p>
+            <p class="mt-[1%] text-base">Whether you need a full Eco Brand team or specialized conclusion, Integris can help</p>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
