Change the color of the two buttons present at the left side of the page1

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         </div>
         <div class="RIGHT h-full w-[15%] flex flex-col items-center gap-[2%] relative">
             <span
-                class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[10vh]">New
+                class="h-[5%] w-fit px-3 text-white rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[10vh]">New
                 UI Design</span>
             <span
-                class="h-[5%] w-fit px-3 rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[10vh] -translate-x-[0.5vw]">Crafted
+                class="h-[5%] w-fit px-3 text-white rounded-full flex justify-center items-center bg-[#5F20EA] relative translate-y-[10vh] -translate-x-[0.5vw]">Crafted
                 By Chirag</span>
             <div class="RIGHT_IMAGE bg-black absolute bottom-[10%] right-[60%] rotate-[10deg] overflow-hidden">
             </div>
