Covering Div Effect Completed

--- a/index.html
+++ b/index.html
@@ -66,18 +66,49 @@
             </div>
         </div>
     </div>
-    <div class="Page2 border-2 border-black h-[150vh] w-full border-2 border-black">
+    <div class="Page2 border-2 border-black h-[150vh] w-full bg-black">
         <!-- Upper part containing two circles and Text -->
         <div class="w-full h-[5%] flex items-center border-2 border-black gap-[0.5%] px-[3%]"><span
                 class="w-[4vh] h-[4vh] bg-[#FFFFFF] rounded-full"></span><span
                 class="w-[4vh] h-[4vh] bg-[#B9E901] rounded-full"></span>
-            <p class="ml-[1%] text-lg">Our Services</p>
+            <p class="ml-[1%] text-white text-lg">Our Services</p>
         </div>
         <!-- Text Containing Div-->
-        <div class="mt-[2%] px-[3%] border-2 border-black">
-            <p class="text-7xl">Find out more about</p>
-            <p class="text-7xl">our EcoBrands</p>
-            <p class="mt-[1.5%] text-base">Whether you need a full Eco Brand team or specialized conclusion, Integris can help</p>
+        <div class="mt-[2%] px-[3%] border-2 border-black">text-white 
+            <p class="text-white text-7xl">Find out more about</p>
+            <p class="text-white text-7xl">our EcoBrands</p>
+            <p class="mt-[1.5%] text-white text-base">Whether you need a full Eco Brand team or specialized conclusion, Integris can help</p>
+        </div>
+        <!-- Covering Effect div -->
+        <div class="h-[30%] px-[3%] mt-[2%] border-2 border-black">
+            <div class="HoverAnimation h-[25%] border-b-2 border-[#222222] flex items-center gap-[0.5%] relative overflow-hidden z-[99]">
+                <p class="w-[15%] text-white text-4xl">01</p>
+                <p class="w-[60%] text-white text-4xl">Market Research</p>
+                <div class="h-[7vh] w-[7vh] bg-white rounded-full flex justify-center items-center"><i class="ri-arrow-right-fill text-3xl"></i></div>
+                <!-- Covering Div -->
+                <div class="Animate h-full w-full bg-blue-600 absolute top-[100%] z-[-1]"></div>
+            </div>
+            <div class="HoverAnimation h-[25%] border-b-2 border-[#222222] flex items-center gap-[0.5%] relative overflow-hidden z-[99]">
+                <p class="text-white w-[15%] text-4xl">02</p>
+                <p class="text-white w-[60%] text-4xl">Ads Production</p>
+                <div class="h-[7vh] w-[7vh] bg-white rounded-full flex justify-center items-center"><i class="ri-arrow-right-fill text-3xl"></i></div>
+                <!-- Covering Div -->
+                <div class="Animate h-full w-full bg-blue-600 absolute top-[100%] z-[-1]"></div>
+            </div>
+            <div class="HoverAnimation h-[25%] border-b-2 border-[#222222] flex items-center gap-[0.5%] relative overflow-hidden z-[99]">
+                <p class="text-white w-[15%] text-4xl">03</p>
+                <p class="text-white w-[60%] text-4xl">Branding Strategies</p>
+                <div class="h-[7vh] w-[7vh] bg-white rounded-full flex justify-center items-center"><i class="ri-arrow-right-fill text-3xl"></i></div>
+                <!-- Covering Div -->
+                <div class="Animate h-full w-full bg-blue-600 absolute top-[100%] z-[-1]"></div>
+            </div>
+            <div class="HoverAnimation h-[25%] border-b-2 border-[#222222] flex items-center gap-[0.5%] relative overflow-hidden z-[99]">
+                <p class="text-white w-[15%] text-4xl">04</p>
+                <p class="text-white w-[60%] text-4xl">Managed Cloud</p>
+                <div class="h-[7vh] w-[7vh] bg-white rounded-full flex justify-center items-center"><i class="ri-arrow-right-fill text-3xl"></i></div>
+                <!-- Covering Div -->
+                <div class="Animate h-full w-full bg-blue-600 absolute top-[100%] z-[-1]"></div>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
