Scrollling Div completed

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
         </div>
     </div>
-    <div class="Page2 border-2 border-black h-[150vh] w-full bg-black">
+    <div class="Page2 border-2 border-black h-[150vh] w-full bg-black relative overflow-hidden">
         <!-- Upper part containing two circles and Text -->
         <div class="w-full h-[5%] flex items-center border-2 border-black gap-[0.5%] px-[3%]"><span
                 class="w-[4vh] h-[4vh] bg-[#FFFFFF] rounded-full"></span><span
@@ -109,6 +109,23 @@
                 <!-- Covering Div -->
                 <div class="Animate h-full w-full bg-blue-600 absolute top-[100%] z-[-1]"></div>
             </div>
+        </div>
+        <!-- Moving Divs with Scrolling -->
+        <div class="h-[15vh] w-[120vw] bg-white absolute z-[9999] left-1/2 -translate-x-1/2 bottom-[20%] flex -rotate-[10deg]">
+            <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">2D/3D</p>
+            <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">DESIGN</p>
+            <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">TEAMS</p>
+            <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">ECO</p>
+            <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">FRIENDLY</p>
+            <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">CREATE</p>
+        </div>
+        <div class="h-[15vh] w-[120vw] bg-[#ABD709] absolute z-[9999] left-1/2 -translate-x-1/2 bottom-[20%] flex rotate-[8deg]">
+            <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">2D/3D</p>
+            <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">DESIGN</p>
+            <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">TEAMS</p>
+            <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">ECO</p>
+            <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">FRIENDLY</p>
+            <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">CREATE</p>
         </div>
     </div>
     <script src="script.js"></script>
