Added and remove some items in Assets Folder

--- a/index.html
+++ b/index.html
@@ -74,44 +74,54 @@
             <p class="ml-[1%] text-white text-lg">Our Services</p>
         </div>
         <!-- Text Containing Div-->
-        <div class="mt-[2%] px-[3%] border-2 border-black">text-white 
+        <div class="mt-[2%] px-[3%] border-2 border-black">text-white
             <p class="text-white text-7xl">Find out more about</p>
             <p class="text-white text-7xl">our EcoBrands</p>
-            <p class="mt-[1.5%] text-white text-base">Whether you need a full Eco Brand team or specialized conclusion, Integris can help</p>
+            <p class="mt-[1.5%] text-white text-base">Whether you need a full Eco Brand team or specialized conclusion,
+                Integris can help</p>
         </div>
         <!-- Covering Effect div -->
         <div class="h-[30%] px-[3%] mt-[2%] border-2 border-black">
-            <div class="HoverAnimation h-[25%] border-b-2 border-[#222222] flex items-center gap-[0.5%] relative overflow-hidden z-[99]">
+            <div
+                class="HoverAnimation h-[25%] border-b-2 border-[#222222] flex items-center gap-[0.5%] relative overflow-hidden z-[99]">
                 <p class="w-[15%] text-white text-4xl">01</p>
                 <p class="w-[60%] text-white text-4xl">Market Research</p>
-                <div class="h-[7vh] w-[7vh] bg-white rounded-full flex justify-center items-center"><i class="ri-arrow-right-fill text-3xl"></i></div>
+                <div class="h-[7vh] w-[7vh] bg-white rounded-full flex justify-center items-center"><i
+                        class="ri-arrow-right-fill text-3xl"></i></div>
                 <!-- Covering Div -->
                 <div class="Animate h-full w-full bg-blue-600 absolute top-[100%] z-[-1]"></div>
             </div>
-            <div class="HoverAnimation h-[25%] border-b-2 border-[#222222] flex items-center gap-[0.5%] relative overflow-hidden z-[99]">
+            <div
+                class="HoverAnimation h-[25%] border-b-2 border-[#222222] flex items-center gap-[0.5%] relative overflow-hidden z-[99]">
                 <p class="text-white w-[15%] text-4xl">02</p>
                 <p class="text-white w-[60%] text-4xl">Ads Production</p>
-                <div class="h-[7vh] w-[7vh] bg-white rounded-full flex justify-center items-center"><i class="ri-arrow-right-fill text-3xl"></i></div>
+                <div class="h-[7vh] w-[7vh] bg-white rounded-full flex justify-center items-center"><i
+                        class="ri-arrow-right-fill text-3xl"></i></div>
                 <!-- Covering Div -->
                 <div class="Animate h-full w-full bg-blue-600 absolute top-[100%] z-[-1]"></div>
             </div>
-            <div class="HoverAnimation h-[25%] border-b-2 border-[#222222] flex items-center gap-[0.5%] relative overflow-hidden z-[99]">
+            <div
+                class="HoverAnimation h-[25%] border-b-2 border-[#222222] flex items-center gap-[0.5%] relative overflow-hidden z-[99]">
                 <p class="text-white w-[15%] text-4xl">03</p>
                 <p class="text-white w-[60%] text-4xl">Branding Strategies</p>
-                <div class="h-[7vh] w-[7vh] bg-white rounded-full flex justify-center items-center"><i class="ri-arrow-right-fill text-3xl"></i></div>
+                <div class="h-[7vh] w-[7vh] bg-white rounded-full flex justify-center items-center"><i
+                        class="ri-arrow-right-fill text-3xl"></i></div>
                 <!-- Covering Div -->
                 <div class="Animate h-full w-full bg-blue-600 absolute top-[100%] z-[-1]"></div>
             </div>
-            <div class="HoverAnimation h-[25%] border-b-2 border-[#222222] flex items-center gap-[0.5%] relative overflow-hidden z-[99]">
+            <div
+                class="HoverAnimation h-[25%] border-b-2 border-[#222222] flex items-center gap-[0.5%] relative overflow-hidden z-[99]">
                 <p class="text-white w-[15%] text-4xl">04</p>
                 <p class="text-white w-[60%] text-4xl">Managed Cloud</p>
-                <div class="h-[7vh] w-[7vh] bg-white rounded-full flex justify-center items-center"><i class="ri-arrow-right-fill text-3xl"></i></div>
+                <div class="h-[7vh] w-[7vh] bg-white rounded-full flex justify-center items-center"><i
+                        class="ri-arrow-right-fill text-3xl"></i></div>
                 <!-- Covering Div -->
                 <div class="Animate h-full w-full bg-blue-600 absolute top-[100%] z-[-1]"></div>
             </div>
         </div>
         <!-- Moving Divs with Scrolling -->
-        <div class="h-[15vh] w-[120vw] bg-white absolute z-[9999] left-1/2 -translate-x-1/2 bottom-[20%] flex -rotate-[10deg]">
+        <div
+            class="h-[15vh] w-[120vw] bg-white absolute z-[9999] left-1/2 -translate-x-1/2 bottom-[20%] flex -rotate-[10deg]">
             <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">2D/3D</p>
             <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">DESIGN</p>
             <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">TEAMS</p>
@@ -119,7 +129,8 @@
             <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">FRIENDLY</p>
             <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">CREATE</p>
         </div>
-        <div class="h-[15vh] w-[120vw] bg-[#ABD709] absolute z-[9999] left-1/2 -translate-x-1/2 bottom-[20%] flex rotate-[8deg]">
+        <div
+            class="h-[15vh] w-[120vw] bg-[#ABD709] absolute z-[9999] left-1/2 -translate-x-1/2 bottom-[20%] flex rotate-[8deg]">
             <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">2D/3D</p>
             <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">DESIGN</p>
             <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">TEAMS</p>
