Creating the Basic structure of Marquee Animation

--- a/index.html
+++ b/index.html
@@ -139,6 +139,19 @@
             <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">CREATE</p>
         </div>
     </div>
+    <!-- Marquee -->
+    <div class="h-[15vh] w-full bg-yellow-100">
+        <div class="CONTAINER h-full w-full flex items-center border-2 border-yellow-900">
+            <p class="h-full w-[12.5%] flex justify-center items-center bg-red-500">REGISTER NOW</p>
+            <p class="h-full w-[12.5%] flex justify-center items-center bg-red-500">REGISTER NOW</p>
+            <p class="h-full w-[12.5%] flex justify-center items-center bg-red-500">REGISTER NOW</p>
+            <p class="h-full w-[12.5%] flex justify-center items-center bg-red-500">REGISTER NOW</p>
+            <p class="h-full w-[12.5%] flex justify-center items-center bg-red-500">REGISTER NOW</p>
+            <p class="h-full w-[12.5%] flex justify-center items-center bg-red-500">REGISTER NOW</p>
+            <p class="h-full w-[12.5%] flex justify-center items-center bg-red-500">REGISTER NOW</p>
+            <p class="h-full w-[12.5%] flex justify-center items-center bg-red-500">REGISTER NOW</p>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 
