Marquee Animation is completed

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="CENTER h-full w-[60%] flex flex-col justify-center items-center relative">
-            <p class="w-full h-[10%] flex justify-center items-center text-lg">Creating Experience that Inspire:</p>
+            <p class="w-full h-[10%] flex justify-center items-center text-lg">Creating Experience that Inspire</p>
             <p class="w-full h-[20%] flex justify-center items-center text-7xl">Discover Eco-friendly</p>
             <p class="w-full h-[20%] flex justify-center items-center text-7xl relative">Brand<span
                     class="h-[12vh] w-[12vh] mx-3 border-2 border-[#7EAE47] rounded-full relative">
@@ -140,16 +140,28 @@
         </div>
     </div>
     <!-- Marquee -->
-    <div class="h-[15vh] w-full bg-yellow-100">
-        <div class="CONTAINER h-full w-full flex items-center border-2 border-yellow-900">
-            <p class="h-full w-[12.5%] flex justify-center items-center bg-red-500">REGISTER NOW</p>
-            <p class="h-full w-[12.5%] flex justify-center items-center bg-red-500">REGISTER NOW</p>
-            <p class="h-full w-[12.5%] flex justify-center items-center bg-red-500">REGISTER NOW</p>
-            <p class="h-full w-[12.5%] flex justify-center items-center bg-red-500">REGISTER NOW</p>
-            <p class="h-full w-[12.5%] flex justify-center items-center bg-red-500">REGISTER NOW</p>
-            <p class="h-full w-[12.5%] flex justify-center items-center bg-red-500">REGISTER NOW</p>
-            <p class="h-full w-[12.5%] flex justify-center items-center bg-red-500">REGISTER NOW</p>
-            <p class="h-full w-[12.5%] flex justify-center items-center bg-red-500">REGISTER NOW</p>
+    <div class="overflow-hidden" >
+        <div class="h-[15vh] w-[200vw] bg-black flex">
+            <div class="MarqueeContainer h-full w-[100vw] flex items-center border-yellow-900">
+                <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
+                <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
+                <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
+                <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
+                <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
+                <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
+                <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
+                <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
+            </div>
+            <div class="MarqueeContainer h-full w-[100vw] flex items-center border-yellow-900">
+                <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
+                <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
+                <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
+                <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
+                <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
+                <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
+                <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
+                <p class="h-full w-[12.5%] flex justify-center items-center text-lg text-[#056E6E]">REGISTER NOW</p>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
