--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
     <div class="Page2 border-2 border-black h-[150vh] w-full bg-black relative overflow-hidden">
         <!-- Upper part containing two circles and Text -->
-        <div class="w-full h-[5%] flex items-center border-2 border-black gap-[0.5%] px-[3%]"><span
+        <div class="w-full h-[5.2%] flex items-center gap-[0.5%] px-[3%]"><span
                 class="w-[4vh] h-[4vh] bg-[#FFFFFF] rounded-full"></span><span
                 class="w-[4vh] h-[4vh] bg-[#B9E901] rounded-full"></span>
             <p class="ml-[1%] text-white text-lg">Our Services</p>
@@ -121,7 +121,7 @@
         </div>
         <!-- Moving Divs with Scrolling -->
         <div
-            class="h-[15vh] w-[120vw] bg-white absolute z-[9999] left-1/2 -translate-x-1/2 bottom-[20%] flex -rotate-[10deg]">
+            class="mDivOne h-[15vh] w-[120vw] bg-white absolute z-[9999] left-1/2 -translate-x-1/2 bottom-[20%] flex -rotate-[10deg]">
             <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">2D/3D</p>
             <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">DESIGN</p>
             <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">TEAMS</p>
@@ -130,7 +130,7 @@
             <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">CREATE</p>
         </div>
         <div
-            class="h-[15vh] w-[120vw] bg-[#ABD709] absolute z-[9999] left-1/2 -translate-x-1/2 bottom-[20%] flex rotate-[8deg]">
+            class="mDivTwo h-[15vh] w-[120vw] bg-[#ABD709] absolute z-[9999] left-1/2 -translate-x-1/2 bottom-[20%] flex rotate-[8deg]">
             <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">2D/3D</p>
             <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">DESIGN</p>
             <p class="h-full w-[16.66%] flex justify-center items-center text-4xl">TEAMS</p>
@@ -164,6 +164,13 @@
             </div>
         </div>
     </div>
+    <!-- Scripts -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
+        integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"
+        integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
 
