Completed the footer part

--- a/index.html
+++ b/index.html
@@ -164,6 +164,40 @@
             </div>
         </div>
     </div>
+    <!-- Footer -->
+    <footer class="h-[35vh] w-full bg-black">
+        <div class="UPPER h-[60%] w-full border-b-2 border-[#222222] px-[3%] flex items-center">
+            <p class="h-full w-[18.8%] py-[2%] flex justify-center items-center text-[#BED1D1]">EcoBrands</p>
+            <div class="h-full w-[18.8%] py-[2%] flex flex-col justify-center items-center">
+                <p class="text-[#BED1D1]">WEEBLY THEMES</p>
+                <p class="text-[#BED1D1]">PRES SALE FAQS</p>
+                <P class="text-[#BED1D1]">SUBMIT A TICKET</P>
+            </div>
+            <div class="h-full w-[18.8%] py-[2%] flex flex-col justify-center items-center">
+                <p class="text-[#BED1D1]">SERVICES</p>
+                <p class="text-[#BED1D1]">THEME TWEAK</p>
+            </div>
+            <div class="h-full w-[18.8%] py-[2%] flex flex-col justify-center items-center">
+                <p class="text-[#BED1D1]">Showcase</p>
+                <p class="text-[#BED1D1]">WIDGETKIT</p>
+                <p class="text-[#BED1D1]">SUPPORT</p>
+            </div>
+            <div class="h-full w-[18.8%] py-[2%] flex flex-col justify-center items-center">
+                <p class="text-[#BED1D1]">ABOUT US</p>
+                <p class="text-[#BED1D1]">CONTACT US</p>
+                <p class="text-[#BED1D1]">AFFILIATES</p>
+                <p class="text-[#BED1D1]">RESOURCES</p>
+            </div>
+        </div>
+        <div class="LOWER h-[25%] w-full flex justify-center items-center gap-[0.5%]">
+            <span class="h-[5vh] w-[5vh] rounded-full border border-white flex justify-center items-center"><i class="ri-facebook-fill text-[#D5EDED] text-lg"></i></span>
+            <span class="h-[5vh] w-[5vh] rounded-full border border-white flex justify-center items-center"><i class="ri-twitter-fill text-[#D5EDED] text-lg"></i></span>
+            <span class="h-[5vh] w-[5vh] rounded-full border border-white flex justify-center items-center"><i class="ri-google-fill text-[#D5EDED] text-lg"></i></span>
+            <span class="h-[5vh] w-[5vh] rounded-full border border-white flex justify-center items-center"><i class="ri-discord-fill text-[#D5EDED] text-lg"></i></span>
+            <span class="h-[5vh] w-[5vh] rounded-full border border-white flex justify-center items-center"><i class="ri-linkedin-box-fill text-[#D5EDED] text-lg"></i></span>
+        </div>
+        <p class="BOTTOM h-[15%] w-full flex justify-center text-[#BED1D1]">@Copyright. All rights reserved</p>
+    </footer>
     <!-- Scripts -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
         integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
